RESOLVED FIXED39369
Fixes Windows Qt Release post r59772.
https://bugs.webkit.org/show_bug.cgi?id=39369
Summary Fixes Windows Qt Release post r59772.
Marcus Bulach
Reported 2010-05-19 11:49:31 PDT
Fixes Windows Qt Release post r59772.
Attachments
Patch (1.35 KB, patch)
2010-05-19 11:54 PDT, Marcus Bulach
eric: review+
eric: commit-queue-
Marcus Bulach
Comment 1 2010-05-19 11:54:08 PDT
Eric Seidel (no email)
Comment 2 2010-05-19 11:59:24 PDT
Comment on attachment 56507 [details] Patch The commit-queue won't work since the builders are red. I'll land this by hand.
Eric Seidel (no email)
Comment 3 2010-05-19 12:08:31 PDT
Csaba Osztrogonác
Comment 4 2010-05-19 12:18:47 PDT
Thx for the fix, I kicked the bot to build the fixed revision.
Note You need to log in before you can comment on or make changes to this bug.