2010-05-19  Marcus Bulach  <bulach@chromium.org>

Reviewed by Eric Seidel.

        Fixes Windows Qt Release post r59772.
        https://bugs.webkit.org/show_bug.cgi?id=39369

        * platform/GeolocationService.cpp:

Canonical link: https://commits.webkit.org/50897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59779 268f45cc-cd09-0410-ab3c-d52691b4dbfc